Use Resolver to check id product Create modal to create new product

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,1 +1,14 @@
-<p>product works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-6">
+<!--      <img [src]="product.image" [alt]="product.title">-->
+    </div>
+    <div class="col-6">
+      <h2>{{product.title}}</h2>
+      <h4>{{product.description}}</h4>
+      <ul>
+        <li>{{product.price}}</li>
+      </ul>
+    </div>
+  </div>
+</div>
