--- a/src/app/components/products/product-card/product-card.component.html
+++ b/src/app/components/products/product-card/product-card.component.html
@@ -1,17 +1,21 @@
-<mat-card class="product-card">
-  <img mat-card-image [src]="product.image+'?random='+product.id" alt="Image by Lorem Picsum">
-  <mat-card-header>
-    <mat-card-title>{{product.title}}</mat-card-title>
-    <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-  </mat-card-header>
+<mat-card class="example-card">
+  <div class="">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>{{product.title}}</mat-card-title>
+      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+    </mat-card-header>
+    <span>{{ product.price | currency }}</span>
+  </div>
+
+  <img style="width: 100%; object-fit: cover; max-height: 300px" [src]="product.thumbnail" [alt]="product.title">
   <mat-card-content>
     <p>
       {{product.description}}
     </p>
   </mat-card-content>
-
   <mat-card-actions>
-    <button mat-button>Add to cart</button>
-    <button mat-button>Details</button>
+    <button mat-button>Add to card</button>
+    <button mat-button [routerLink]="'product/'+ product.id">View more</button>
   </mat-card-actions>
 </mat-card>
