--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,6 +1,15 @@
-<div class="container">
-  <div class="product-card-box" *ngFor="let product of products">
-    <app-product-card [product]="product">
-    </app-product-card>
-  </div>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <button style="margin-left: auto" color="accent" mat-raised-button class="example-icon"
+            aria-label="Example icon-button with share icon"
+            (click)="openDialog()">
+      <mat-icon>add</mat-icon>
+      New Product
+    </button>
+  </mat-toolbar-row>
+</mat-toolbar>
+
+<div style="display: flex; flex-wrap: wrap; gap: 20px">
+  <app-product-card *ngFor="let product of products" [product]="product">
+  </app-product-card>
 </div>
